# LESS

./: .gitignore  Cargo.toml  README.md  flake.nix  less.config.json
audio/: test.csv
macroquad-test/: Cargo.toml
macroquad-test/src/: main.rs
src/: audio.rs  config.rs  main.rs  simulation.rs  startup.rs  types.rs  video.rs
src/types/: ball.rs  cube.rs  objects.rs
src/video/: encoder.rs  graphics.rs
yt-test/: Cargo.toml
yt-test/src/: main.rs
