[package]
name = "slop-system"
description = """
A short-form braindead content generator.
"""
version = "0.1.0"
edition = "2024"
homepage = "https://low-effort.work/"
license = "GPLv3"
repository = "https://github.com/Low-Effort-Group/LESS"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
hsl = "0.1.1"
image = { version = "0.25.10", default-features = false }
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.149"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
opt-level = 3
